--- a/src/Componant/About/About.css
+++ b/src/Componant/About/About.css
@@ -9,11 +9,12 @@
 }
 .aboutMain{
     color: #0B0B48;
-    
+    padding-top: 120px;
    
 }
 .aboutIntro{
     color: #6A68D7;
-    padding-top: 40px;
+    padding-top: 30px;
     padding-bottom: 50px;
+    font-size: 25px;
 }
