--- a/src/Componant/ProjectName/project.css
+++ b/src/Componant/ProjectName/project.css
@@ -1,74 +1,34 @@
-.projectRoot {
-    padding-top: 30px;
-    background: #D1CCF2;
+.projectRoot{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.projectMain {
-    padding-top: 40px;
-    display: flex;
-    flex-direction: row;
-    gap: 160px;
-}
-
-.projectPg {
-    border: yellow solid 2px;
-
+    padding-bottom: 6%;
     color: #0B0B48;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
-    padding: 15px;
-    border: 3px solid #3D1766;
-    box-shadow: 10px 10px 1px rgba(0, 0, 0, 0.2);
-
-
+    padding-top: 10%;
+    
+   
 }
-.projectPg:hover {
-        transform: translateY(-10px) scale(1.1);
-        border: 2px solid white;
-        color: yellow;
-
-}
-
-.projectPo {
-    border: green solid 2px;
-    color: #0B0B48;
-    border-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
-    padding: 15px;
-    border: 3px solid #3D1766;
-    box-shadow: 10px 10px 1px rgba(0, 0, 0, 0.2);
-
-
-}
-.projectPo:hover {
-    transform: translateY(-10px) scale(1.1);
+.projectDiv:hover {
+    transform: translateY(-4px) scale(1.1);
     border: 2px solid white;
-    color: yellow;
+    
 }
-
-.projectTd {
-    border: blue solid 2px;
-    color: #0B0B48;
-    border-radius: 12px;
+.project{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 2rem;
-    padding: 15px;
-    border: 3px solid #3D1766;
-    box-shadow: 10px 10px 1px rgba(0, 0, 0, 0.2);
+    gap: 2rem;
+    padding-bottom: 10%;
+    
 }
-.projectTd:hover {
-    transform: translateY(-10px) scale(1.1);
-    border: 2px solid white;
-    color: yellow;
+.projectDiv {
+    box-shadow: 6px 6px;
+    height: 10rem;
+    width: 10rem;
+    background-color: #0B0B48;
+    color: rgb(139, 141, 141);
+   
+ 
+   
+    
 }
