--- a/src/Componant/Skills/Skill.css
+++ b/src/Componant/Skills/Skill.css
@@ -1,6 +1,86 @@
-.about{
+.SkillMain{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10%;
+    padding-bottom: 5%;
+    color: #0B0B48;
+    font-size: 15px;
+    
+}
+.mySwiper{
+  
+    width: 380px;
+    height: 350px; 
+
+}
+.SkillImg_1{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.SkillImg_1>img{
+    height: 100%;
+    width: 100%;
+}
+.SkillImg_2{
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.SkillImg_2>img{
+    height: 100%;
+    width: 100%;
+}
+
+.SkillImg_3{
+  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.SkillImg_3>img{
+    height: 100%;
+    width: 100%;
+}
+/* .SkillImg_4{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.SkillImg_4>img{
+    width: 100%;
+    height: 100%; 
+    
+} */
+.SkillImg_5{
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.SkillImg_5>img{
+    height: 100%;
+    width: 100%;
+}
+.SkillImg_6{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.SkillImg_6>img{
+    height: 100%;
+    width: 100%;
+}
+
+/* .about{
     background: #D1CCF2;
-    ;
+    padding: 120px;
+    
 }
 .aboutSkill{
     color: #0B0B48;
@@ -17,6 +97,7 @@
 
 .aboutSkillTitle{
     padding-bottom: 50px;
+  
     
 }
 .aboutSkill:hover {
@@ -29,4 +110,4 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-}
+} */
