--- a/src/Componant/Hero/Hero.css
+++ b/src/Componant/Hero/Hero.css
@@ -54,3 +54,26 @@
     color: yellow;
     
 }
+
+/* ------responsive------ */
+/* For screens smaller than 600px (mobile devices) */
+@media only screen and (max-width: 600px) {
+    .heroRoot{
+        flex-direction: column;
+        margin:5rem;
+        gap: 2rem;
+    }
+    
+    .HeroImg{ 
+        width: 250px;
+        height: 250px;
+    }
+    
+    .heroContant{
+       font-size: 1.5rem;
+    }
+    
+    .heroContantSub {
+        padding-bottom: 50px;
+    }
+}
