--- a/src/Componant/Footer/Footer.css
+++ b/src/Componant/Footer/Footer.css
@@ -1,31 +1,64 @@
-.footer-icon-root{
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    text-align: center;
-    justify-content: center;
-    padding: 2rem;
-    
-}
-.text-center{
-    /* border: 2px solid red; */
-    /* padding-top: 4%; */
-    margin: 0px;
-    background-color: #c0c0ff;
-   
+.footer-icon-root {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  text-align: center;
+  justify-content: center;
+  padding: 2rem;
+
+
 
 }
-.text-center-copy{
-    background-color: rgba(0, 0, 0, 0.2);
-    padding-top: 5%;
-    padding-bottom: 5%;
-    font-size: 25px;
-    display:flex;
+
+.text-center {
+
+  margin: -20px;
+  background-color: #c0c0ff;
+
+
+
+}
+
+.text-center-copy {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding-top: 2%;
+  padding-bottom: 2%;
+
+  font-size: 25px;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.text-dark {
+  font-size: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .footer-icon-root {
     flex-direction: row;
-    text-align: center;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .text-center {
+    font-size: 14px;
+    padding: 2rem 0rem 0rem 1rem;
+  }
+
+  .text-center-copy {
+    font-size: 14px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     gap: 1rem;
-}
-.text-dark{
-   font-size: 20px;   
+  }
+
+  .text-dark {
+    font-size: 16px;
+  }
 }
