--- a/src/Componant/Nav/Nav.css
+++ b/src/Componant/Nav/Nav.css
@@ -1,5 +1,5 @@
 .navbar {
-    /* border: red solid; */
+    
     background-color: #0B0B48;
     position: fixed;
     display: flex;
@@ -52,3 +52,39 @@
     cursor: pointer;
     color: yellow;
 }
+
+
+/* responsive */
+
+@media only screen and (max-width: 768px) {
+    .navbar_root {
+        display: none; /* hide the menu items on mobile */
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        width: 100%;
+        background-color: #0B0B48;
+        padding-top: 50px;
+        z-index: 20;
+        box-shadow: 2px 4px 39px 0px rgba(0, 0, 0, 0.83);
+        -webkit-box-shadow: 2px 4px 39px 0px rgba(0, 0, 0, 0.83);
+        -moz-box-shadow: 2px 4px 39px 0px rgba(0, 0, 0, 0.83);
+    }
+
+    .navbar_root>li {
+        padding: 10px;
+    }
+
+    
+}
+
+
+  
+  
+  
+  
+
+
