--- a/src/Componant/Skills/Skill.css
+++ b/src/Componant/Skills/Skill.css
@@ -45,17 +45,7 @@
     height: 100%;
     width: 100%;
 }
-/* .SkillImg_4{
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.SkillImg_4>img{
-    width: 100%;
-    height: 100%; 
-    
-} */
+
 .SkillImg_5{
    
     display: flex;
@@ -77,37 +67,19 @@
     width: 100%;
 }
 
-/* .about{
-    background: #D1CCF2;
-    padding: 120px;
-    
-}
-.aboutSkill{
-    color: #0B0B48;
-    border-radius: 12px;
-    display: block;
-    margin: auto;
-    margin-bottom: 2rem;
-    padding: 15px;
-    border: 3px solid #3D1766;
-    box-shadow: 10px 10px 1px rgba(0, 0, 0, 0.2);
-    width: fit-content;
-    
-}
 
-.aboutSkillTitle{
-    padding-bottom: 50px;
-  
-    
-}
-.aboutSkill:hover {
-    transform: translateY(-4px) scale(1.1);
-    border: 2px solid white;
-    
-}
-.aboutSkill>ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-} */
+
+/* responsive */
+@media screen and (max-width: 767px) {
+    .SkillImg_1,
+    .SkillImg_2,
+    .SkillImg_3,
+    .SkillImg_5,
+    .SkillImg_6 {
+      flex-direction: row;
+    }
+    .SkillMain {
+      font-size: 12px;
+    }
+  }
+
